Addressing comments